# gh_manager

./: .buildinfo  README.md  genindex.html  index.html  introduction.html  pyproject.toml  requirements.txt  searchindex.js  usage.html
.github/workflows/: docs.yml  python-tests.yml
_sources/: introduction.rst.txt  usage.rst.txt
docs/: api.rst  conf.py
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  introduction.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  introduction.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt
tests/: test_delete_repo.py
